<resources>
    <string name="app_name">DroneParking</string>
    <string name="action_settings">Settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="model_not_available">Model Not Available</string>
    <string name="push_info">Push Info</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="map_key">Build</string>
    <string name="shows_a_pop_up_window_displaying_the_drone_s_live_camera_feed">shows a pop-up window displaying the drone\'s live camera feed</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="mapbox_api_key">pk.eyJ1Ijoiam9zZWJncyIsImEiOiJja3IzbTl4YWMwMDhwMnBudGcwN285dWExIn0.ztypy24IDPBVQXXrk-cBZg</string>

    <!--Flight Plan Activity-->
    <string name="Flight_Planner">Flight Planner</string>
    <string name="title_activity_flight_plan">Map</string>
    <string name="create_flight_plan">Create Flight Plan</string>
    <string name="cancel_flight_plan">Cancel/Clear Mission</string>
    <string name="confirm_flight_plan">Start Flight</string>
    <string name="cancel_flight">Cancel Flight</string>
    <string name="stitch_button">Stitch</string>
    <string name="clear_flight_plan">Clear</string>
    <!--Flight Plan Activity Dialog Start Up-->
    <string name="ensure_clear_sd">In order to survey with your drone, you must empty your drone\'s SD card. Would you like to empty it now? Warning: Pressing yes will delete all data on your SD card.</string>
    <string name="ensure_download_from_SD_Card">Would you like to download the photos taken during this mission?</string>
    <string name="title_clear_sd">Clear SD Card?</string>
    <string name="title_download_photos">Download Photos?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="compass_value">compass value</string>
    <string name="align">align</string>
    <string name="welcome">Welcome to Car Counter</string>
    <string name="overlay_text">Tap on the map to place vertices to define a polygon, then \npress \'Create Flight Plan\' to create a flight path for the drone.</string>
    <string name="get_started">Get Started</string>
    <string name="camera">camera</string>
    <string name="map">map</string>
    <string name="locate">locate</string>
    <string name="photo_stitch">Photo Stitch</string>
    <string name="photo_stitching_progress_text">Photo-stitching progress text</string>
    <string name="loading">Loading...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photos">Photos</string>
    <string name="mission_file_example_str">Mission 1 - 2021-08-26 1:17:25 - 4 images</string>
    <string name="stitch_images">Stitch Images</string>
    <string name="download">Download Stitch</string>
</resources>